--- a/assets/css/resultstyle.css
+++ b/assets/css/resultstyle.css
@@ -11,6 +11,8 @@ body {
 	align-items: center;
 	padding: 30px 0;
 	min-height: 100vh;
+	/* background-color: rgba(0, 0, 0, 0.372); */
+	background: linear-gradient(#f94b4b, #333869);
 }
 
 img {
@@ -56,6 +58,9 @@ li {
 	height: 100%;
 }
 
+#center{
+	text-align: center;
+}
 
 @media screen and (max-width: 480px) {
 
