--- a/assets/css/resultstyle.css
+++ b/assets/css/resultstyle.css
@@ -61,6 +61,14 @@ li {
 #center{
 	text-align: center;
 }
+#start-btn{
+    color: rgb(255, 204, 0);
+    background-color: hwb(310 17% 34%);
+}
+.question-choice{
+    color: rgb(255, 204, 0);
+    background-color: hwb(310 17% 34%);
+}
 
 @media screen and (max-width: 480px) {
 
